2016-03-08  Oliver Hunt  <oliver@apple.com>

        Start moving to separated writable and executable mappings in the JIT
        https://bugs.webkit.org/show_bug.cgi?id=155178

        Reviewed by Fil Pizlo.

        Update feature defines.

        * Configurations/FeatureDefines.xcconfig:

2016-03-08  Brent Fulgham  <bfulgham@apple.com>

        [WK2][Mac] Allow processes to set "fast-dev-casheable" bit in Network Process
        https://bugs.webkit.org/show_bug.cgi?id=155189
        <rdar://problem/25042678>

        Reviewed by Alexey Proskuryakov.

        Update the NetworkProcess sandbox profiles with a declaration that using the
        system-fctl to touch the "hot file" flag (to support caching operations)
        is allowed. I should have done this in Bug 154503, but did not.

        * NetworkProcess/mac/com.apple.WebKit.NetworkProcess.sb.in: Add sandbox permission.

2016-03-08  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r197793 and r197799.
        https://bugs.webkit.org/show_bug.cgi?id=155195

        something weird happened while landing this and everything
        broke (Requested by olliej on #webkit).

        Reverted changesets:

        "Start moving to separated writable and executable mappings in
        the JIT"
        https://bugs.webkit.org/show_bug.cgi?id=155178
        http://trac.webkit.org/changeset/197793

        "arm64 build fix after r197793."
        http://trac.webkit.org/changeset/197799

2016-03-08  Brent Fulgham  <bfulgham@apple.com>

        [WK2] Grant explicit read access to ManagedPreferences
        https://bugs.webkit.org/show_bug.cgi?id=155173
        <rdar://problem/24910550>

        Reviewed by Alexey Proskuryakov.

        * Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb: Add new
        read permission.

2016-03-08  Anders Carlsson  <andersca@apple.com>

        Ignore deprecation warnings.

        * Shared/mac/ChildProcessMac.mm: