@@ -2822,6 +2822,106 @@ static UITextAutocapitalizationType toUITextAutocapitalize(WebAutocapitalizeType
          [_traits setKeyboardType:UIKeyboardTypeDefault];
     }
 
+#if __IPHONE_OS_VERSION_MIN_REQUIRED >= 100000
+    switch (_assistedNodeInformation.autofillFieldName) {
+    case WebCore::AutofillFieldName::Name:
+        [_traits setTextContentType:UITextContentTypeName];
+        break;
+    case WebCore::AutofillFieldName::HonorificPrefix:
+        [_traits setTextContentType:UITextContentTypeNamePrefix];
+        break;
+    case WebCore::AutofillFieldName::GivenName:
+        [_traits setTextContentType:UITextContentTypeMiddleName];
+        break;
+    case WebCore::AutofillFieldName::AdditionalName:
+        [_traits setTextContentType:UITextContentTypeMiddleName];
+        break;
+    case WebCore::AutofillFieldName::FamilyName:
+        [_traits setTextContentType:UITextContentTypeFamilyName];
+        break;
+    case WebCore::AutofillFieldName::HonorificSuffix:
+        [_traits setTextContentType:UITextContentTypeNameSuffix];
+        break;
+    case WebCore::AutofillFieldName::Nickname:
+        [_traits setTextContentType:UITextContentTypeNickname];
+        break;
+    case WebCore::AutofillFieldName::OrganizationTitle:
+        [_traits setTextContentType:UITextContentTypeJobTitle];
+        break;
+    case WebCore::AutofillFieldName::Organization:
+        [_traits setTextContentType:UITextContentTypeOrganizationName];
+        break;
+    case WebCore::AutofillFieldName::StreetAddress:
+        [_traits setTextContentType:UITextContentTypeFullStreetAddress];
+        break;
+    case WebCore::AutofillFieldName::AddressLine1:
+        [_traits setTextContentType:UITextContentTypeStreetAddressLine1];
+        break;
+    case WebCore::AutofillFieldName::AddressLine2:
+        [_traits setTextContentType:UITextContentTypeStreetAddressLine2];
+        break;
+    case WebCore::AutofillFieldName::AddressLevel3:
+        [_traits setTextContentType:UITextContentTypeSublocality];
+        break;
+    case WebCore::AutofillFieldName::AddressLevel2:
+        [_traits setTextContentType:UITextContentTypeAddressCity];
+        break;
+    case WebCore::AutofillFieldName::AddressLevel1:
+        [_traits setTextContentType:UITextContentTypeAddressState];
+        break;
+    case WebCore::AutofillFieldName::CountryName:
+        [_traits setTextContentType:UITextContentTypeCountryName];
+        break;
+    case WebCore::AutofillFieldName::PostalCode:
+        [_traits setTextContentType:UITextContentTypePostalCode];
+        break;
+    case WebCore::AutofillFieldName::Tel:
+        [_traits setTextContentType:UITextContentTypeTelephoneNumber];
+        break;
+    case WebCore::AutofillFieldName::Email:
+        [_traits setTextContentType:UITextContentTypeEmailAddress];
+        break;
+    case WebCore::AutofillFieldName::URL:
+        [_traits setTextContentType:UITextContentTypeURL];
+        break;
+    case WebCore::AutofillFieldName::None:
+    case WebCore::AutofillFieldName::Username:
+    case WebCore::AutofillFieldName::NewPassword:
+    case WebCore::AutofillFieldName::CurrentPassword:
+    case WebCore::AutofillFieldName::AddressLine3:
+    case WebCore::AutofillFieldName::AddressLevel4:
+    case WebCore::AutofillFieldName::Country:
+    case WebCore::AutofillFieldName::CcName:
+    case WebCore::AutofillFieldName::CcGivenName:
+    case WebCore::AutofillFieldName::CcAdditionalName:
+    case WebCore::AutofillFieldName::CcFamilyName:
+    case WebCore::AutofillFieldName::CcNumber:
+    case WebCore::AutofillFieldName::CcExp:
+    case WebCore::AutofillFieldName::CcExpMonth:
+    case WebCore::AutofillFieldName::CcExpYear:
+    case WebCore::AutofillFieldName::CcCsc:
+    case WebCore::AutofillFieldName::CcType:
+    case WebCore::AutofillFieldName::TransactionCurrency:
+    case WebCore::AutofillFieldName::TransactionAmount:
+    case WebCore::AutofillFieldName::Language:
+    case WebCore::AutofillFieldName::Bday:
+    case WebCore::AutofillFieldName::BdayDay:
+    case WebCore::AutofillFieldName::BdayMonth:
+    case WebCore::AutofillFieldName::BdayYear:
+    case WebCore::AutofillFieldName::Sex:
+    case WebCore::AutofillFieldName::Photo:
+    case WebCore::AutofillFieldName::TelCountryCode:
+    case WebCore::AutofillFieldName::TelNational:
+    case WebCore::AutofillFieldName::TelAreaCode:
+    case WebCore::AutofillFieldName::TelLocal:
+    case WebCore::AutofillFieldName::TelLocalPrefix:
+    case WebCore::AutofillFieldName::TelLocalSuffix:
+    case WebCore::AutofillFieldName::TelExtension:
+    case WebCore::AutofillFieldName::Impp:
+        break;
+    };
+#endif
+
     return _traits.get();
 }
 
